# token_incinerator

./: .gitignore  README.md  pyproject.toml
src/incinerator/: budget.py  cli.py  daemon.py  logger.py  loop.py  prompts.py  repo.py  runner.py  schemas.py  timing.py  types.py  watch.py
tests/: test_auth.py  test_budget.py  test_daemon.py  test_integration.py  test_loop.py  test_prompts.py  test_repo.py  test_runner.py  test_schemas.py  test_timing.py  test_watch.py
tests/fixtures/: fake_claude_bad_json.sh  fake_claude_error.sh  fake_claude_success.sh
